--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -75,6 +75,9 @@
             //    alert( table.row( this ).data() );
             //} );
             
+            //function cumul
+           
+            
             //function autocomplete search
             $(function (){
                  var availableTags = [
