--- a/templates/project/_form.html.twig
+++ b/templates/project/_form.html.twig
@@ -1,4 +1,23 @@
 {{ form_start(form) }}
-    {{ form_widget(form) }}
-    <button class="btn">{{ button_label|default('Save') }}</button>
+    {{ form_row(form.name) }}
+    {{ form_row(form.code) }}
+    {{ form_row(form.startDate) }}
+    {{ form_row(form.endDate) }}
+    {# form.Tjms.vars.prototype     #}
+    {# <div class="col-sm-8 col-sm-offset-4" id="exp_list" data-prototype="{{ form_widget(form.Tjms.vars.prototype|e('html_attr')) }}"> #}
+    <div class="col-sm-8 offset-sm-1" id="exp_list" data-prototype="{{form_widget(form.Tjms.vars.prototype)|e('html_attr')}}">        
+        {% for row in form.Tjms %}        
+        <div class="card mb-2">
+            <div class="card-header bg-warning">
+                <strong>TJM</strong>
+            </div>
+            <div class="card-body">
+                <h5 class="card-title">
+                    {{ form_row(row)}}
+                </h5>
+            </div>
+        </div>
+        {% endfor %}
+    </div>
+    {# <button class="btn">{{ button_label|default('Save') }}</button> #}
 {{ form_end(form) }}
