--- a/templates/project/edit.html.twig
+++ b/templates/project/edit.html.twig
@@ -3,6 +3,7 @@
 {% block title %}Edit Project{% endblock %}
 
 {% block body %}
+<div class="container">
     <h1>Edit Project</h1>
 
     {{ include('project/_form.html.twig', {'button_label': 'Update'}) }}
@@ -10,4 +11,5 @@
     <a href="{{ path('project_index') }}">back to list</a>
 
     {{ include('project/_delete_form.html.twig') }}
+</div>
 {% endblock %}
