--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -70,12 +70,30 @@
         
         <script>
         $(document).ready(function() {
-             //table row            
+             
+
+
+            // function slide down
+            $(".child").hide();            
+            $(".poleclickable").click(function(){
+                $(this).closest('tr').nextUntil('.poleclickable').slideToggle();                
+            });
+            
             // $('#example tbody').on( 'click', 'tr', function () {                
             //    alert( table.row( this ).data() );
             //} );
             
-            //function cumul
+            //function calcul
+            //var total = 1;
+            /* function calcAll(){
+                // select a column
+                $(".calculate-for").each(function (){
+                    if (!isNaN(parseFloat($(this).val()))) {
+                        qnty = parseFloat($(this).val());
+                    }
+                    var total += qnty;
+                }
+            } */
            
             
             //function autocomplete search
@@ -335,91 +353,93 @@
         });
         </script>
         <script>
-        var $collectionHolder;
+         $(document).ready(function() {
+            var $collectionHolder;
 
-        //add new items (experience forms)
-        var $addNewItem = $('<a href="#" class="btn btn-info mt-4">Add new item</a>');        
+            //add new items (experience forms)
+            var $addNewItem = $('<a href="#" class="btn btn-info mt-4">Add new item</a>');        
 
-        $(document).ready(function () {
+            $(document).ready(function () {
 
-            
-            //getTheCollection Holder
-            $collectionHolder = $("#exp_list");           
+                
+                //getTheCollection Holder
+                $collectionHolder = $("#exp_list");           
 
-            //Append the add new item to the collection holder
-            $collectionHolder.append($addNewItem);
-            $collectionHolder.data('index', $collectionHolder.find('.card').length)
+                //Append the add new item to the collection holder
+                $collectionHolder.append($addNewItem);
+                $collectionHolder.data('index', $collectionHolder.find('.card').length)
 
-            //add remove button to existing items
-            $collectionHolder.find('.card').each(function () {
-                addRemoveButtton($(this));
-            })
-
-
-            //handle the click event for addNew item
-            $addNewItem.click(function (e) {
-                e.preventDefault();
-                //create a new form and append it to collectionHolder
-                addNewForm();
-            })
-
-        });
-
-        function addNewForm() {
-            //getting the prototype
-            var prototype = $collectionHolder.data('prototype');
-
-            //get the index
-            var index = $collectionHolder.data('index')
-
-
-            //create the form
-            var newForm = prototype;
-
-            newForm = newForm.replace(/_name_/g.index);
-
-
-            $collectionHolder.data('index', index + 1);
-            //create the card
-            var $card = $("<div class= 'card card-warning'><div class='card-heading'></div></div>");
-
-            //create the card body and append the form to it
-            var $cardBody = $("<div class='card-body'></div>").append(newForm);
-
-            //append the body to the card
-            $card.append($cardBody);
-
-            //append the remove button to the new card
-            addRemoveButtton($card);
-
-            //append the $card to the addNewItem
-            $addNewItem.before($card);
-
-        }
-
-        //add new items (experience forms)
-
-
-        //remove them
-
-        function addRemoveButtton($card) {
-            //create remove button
-            var $removeButton = $("<a href='#' class='btn btn-danger'>Remove</a>");
-
-            //appending the remove button to the card footer
-            var $cardFooter = $("<div class='card-footer'></div>").append($removeButton);
-
-            //handle the click eventg of the remove button
-            $removeButton.click(function (e) {
-                e.preventDefault();
-                $(e.target).parents('.card').slideUp(1000, function () {
-                    $(this).remove();
+                //add remove button to existing items
+                $collectionHolder.find('.card').each(function () {
+                    addRemoveButtton($(this));
                 })
+
+
+                //handle the click event for addNew item
+                $addNewItem.click(function (e) {
+                    e.preventDefault();
+                    //create a new form and append it to collectionHolder
+                    addNewForm();
+                })
+
             });
 
-            //append the footer to the card
-            $card.append($cardFooter);
-        }
+            function addNewForm() {
+                //getting the prototype
+                var prototype = $collectionHolder.data('prototype');
+
+                //get the index
+                var index = $collectionHolder.data('index')
+
+
+                //create the form
+                var newForm = prototype;
+
+                newForm = newForm.replace(/_name_/g.index);
+
+
+                $collectionHolder.data('index', index + 1);
+                //create the card
+                var $card = $("<div class= 'card card-warning'><div class='card-heading'></div></div>");
+
+                //create the card body and append the form to it
+                var $cardBody = $("<div class='card-body'></div>").append(newForm);
+
+                //append the body to the card
+                $card.append($cardBody);
+
+                //append the remove button to the new card
+                addRemoveButtton($card);
+
+                //append the $card to the addNewItem
+                $addNewItem.before($card);
+
+            }
+
+            //add new items (experience forms)
+
+
+            //remove them
+
+            function addRemoveButtton($card) {
+                //create remove button
+                var $removeButton = $("<a href='#' class='btn btn-danger'>Remove</a>");
+
+                //appending the remove button to the card footer
+                var $cardFooter = $("<div class='card-footer'></div>").append($removeButton);
+
+                //handle the click eventg of the remove button
+                $removeButton.click(function (e) {
+                    e.preventDefault();
+                    $(e.target).parents('.card').slideUp(1000, function () {
+                        $(this).remove();
+                    })
+                });
+
+                //append the footer to the card
+                $card.append($cardFooter);
+            }
+         });
         </script>      
     {% block javascripts %}{% endblock %}
     </body>
