--- a/templates/home/_searchProject.html.twig
+++ b/templates/home/_searchProject.html.twig
@@ -4,11 +4,10 @@
         <div class="container">
             <h1 class="mb-5 text-center"><i class="fas fa-search"></i><span class="ml-1">Trouvez un projet</span></h1>
             {{ form_start(form) }}
-                <div class="row align-items-center justify-content-between">
+                <div class="row align-items-end justify-content-between">
                     <div class="col-sm-4">
                         {{ form_row(form.date) }}
                     </div>
-                    <div class="col-sm-1">et / ou</div>
                     <div class="col-sm-4">
                         {{ form_row(form.name) }}
                     </div>
