--- a/templates/home/_searchProject.html.twig
+++ b/templates/home/_searchProject.html.twig
@@ -2,11 +2,14 @@
 <div class="container mt-4" id="search-panel">
     <div class="jumbotron">
         <div class="container">
-            <h1 class="mb-5 text-center"><i class="fas fa-search"></i><span class="ml-1">Trouvez un projet</span></h1>
+            <h1 class="mb-5 text-center"><i class="fas fa-search"></i><span class="ml-1">Trouvez un projet</span></h1>            
             {{ form_start(form) }}
-                <div class="row align-items-end justify-content-between">
+                <div class="row justify-content-between align-items-center">
                     <div class="col-sm-4">
                         {{ form_row(form.date) }}
+                    </div>
+                    <div class="col-sm-1 mb-3">
+                        <div>et / ou</div>
                     </div>
                     <div class="col-sm-4">
                         {{ form_row(form.name) }}
@@ -17,7 +20,7 @@
                         </div>
                     </div>
                 </div>               
-            {{ form_end(form) }}
+            {{ form_end(form) }}        
         </div>
     </div>        
 </div>
