--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -6,7 +6,7 @@
 {% include 'home/_searchProject.html.twig' %}
 
 <div class="container lastProjects">
-    <h5>Les 5 derniers projets</h5>
+    <h5>{{ Arraytitle }}</h5>
     <table class="table table-striped table-hover">
         <thead>
             <tr>
