--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -51,7 +51,7 @@
             <p class= "text-white text-center"> <i class="far fa-copyright"></i> <span class="ml-1">Amiltone 2019 - Tous droits réservés </span> </p>
         </div>
         </div>
-
+        <link rel="stylesheet" href="{{ asset('build/app.css') }}">
        <script src="https://code.jquery.com/jquery-3.3.1.js"></src>
        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
@@ -65,7 +65,11 @@
         {# <script src="https://cdn.datatables.net/buttons/1.5.6/js/dataTables.buttons.min.js"></script>
         <script src="https://cdn.datatables.net/select/1.3.0/js/dataTables.select.min.js"></script> #}
 
-        <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>    
+        <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script> 
+
+        <script src="{{ asset('build/runtime.js') }}"></script>     
+        <script src="{{ asset('build/app.js') }}"></script>
+        <script src="{{ encore_entry_script_tags('app') }} "></script>   
                 
         
         <script>
