--- a/templates/home/_searchProject.html.twig
+++ b/templates/home/_searchProject.html.twig
@@ -1,26 +1,22 @@
 {# Search #}
-<div class="container mt-4" id="search-panel">
-    <div class="jumbotron">
-        <div class="container">
-            <h1 class="mb-5 text-center"><i class="fas fa-search"></i><span class="ml-1">Trouvez un projet</span></h1>            
-            {{ form_start(form) }}
-                <div class="row justify-content-between align-items-center">
-                    <div class="col-sm-4">
-                        {{ form_row(form.date) }}
-                    </div>
-                    <div class="col-sm-1 mb-3">
-                        <div>et / ou</div>
-                    </div>
-                    <div class="col-sm-4">
-                        {{ form_row(form.name) }}
-                    </div>
-                    <div class="col-auto">
-                        <div class="form-group">
-                            <button type="submit" class="btn btn-primary">Rechercher</button>
-                        </div>
-                    </div>
-                </div>               
-            {{ form_end(form) }}        
-        </div>
-    </div>        
+<div class="container mt-5" id="search-panel"> 
+    {# <h1 class="mb-5 text-center"><i class="fas fa-search VaderBlue"></i><span class="ml-1 VaderBlue">Trouvez un projet</span></h1>             #}
+    {{ form_start(form) }}
+        <div class="row justify-content-center align-items-center">
+            <div class="col-sm-4">
+                {{ form_row(form.date) }}
+            </div>
+            <div class="col-sm-1 mb-3 text-white">
+                <div>et / ou</div>
+            </div>
+            <div class="col-sm-4">
+                {{ form_row(form.name) }}
+            </div>
+            <div class="col-auto">
+                <div class="form-group">
+                    <button type="submit" class="btn btn-search"><i class="fas fa-search text-white"></i><span class="ml-1 text-white">Rechercher</span></button>
+                </div>
+            </div>
+        </div>               
+    {{ form_end(form) }}
 </div>
